<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context="com.example.daniel.calculodenotas.MainActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/progra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/programacion"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/nota1M1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/nota2M1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/nota3M1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <TextView
                    android:id="@+id/notaFinalM1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notaFinal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/robotica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robotica"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <EditText
                        android:id="@+id/nota1M2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/nota2M2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/nota3M2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <TextView
                    android:id="@+id/robo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notaFinal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/seminario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seminario"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <EditText
                        android:id="@+id/nota1M3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/nota2M3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/nota3M3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <TextView
                    android:id="@+id/nfinSeminario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notaFinal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/softwareGr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sGrafico"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <EditText
                        android:id="@+id/nota1M4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/nota2M4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/nota3M4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingreseNota"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <TextView
                    android:id="@+id/sgraf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notaFinal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_light"
                android:onClick="promedio"
                android:text="@string/calcularNota"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_acerca_De"
                android:backgroundTint="@color/primary_light"
                android:onClick="lanzar"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
